--- a/part-2/package.json
+++ b/part-2/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:drop": "dropdb grocery_store;",
+    "db:create": "createdb grocery_store;",
+    "db:schema": "psql -d grocery_store < db/schema.sql",
+    "db:seed": "psql -d grocery_store < db/load-data.sql"
   },
   "keywords": [],
   "author": "",
