Add testing and db dependencies

--- a/part-2/package.json
+++ b/part-2/package.json
@@ -12,5 +12,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "chai": "^4.1.0",
+    "mocha": "^3.4.2",
+    "pg-promise": "^6.3.5"
+  }
 }
